infra/kubernetes/jupyter-spark/jupyter-lab.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyter-labs
  labels:
    app: jupyter-labs
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-labs
  template:
    metadata:
      labels:
        app: jupyter-labs
    spec:
      serviceAccountName: spark-sa
      containers:
        - name: jupyter-labs
          image: magaiwer/pyspark-notebook:3.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-labs
  labels:
    app: jupyter-labs
  namespace: spark
spec:
  ports:
    - protocol: TCP
      port: 29413
  selector:
    app: jupyter-labs
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: jupyter-labs-ui
  labels:
    app: jupyter-labs-ui
  namespace: spark
spec:
  ports:
    - protocol: TCP
      port: 8888
  selector:
    app: jupyter-labs
  type: ClusterIP
---
